# semantic-image-search

./: .gitignore  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  embeddings.py  ingestion.py  main.py  qdrant_client.py  query_translator.py  retriever.py
backend/logger/: __init__.py
frontend/: app.js  index.html  styles.css
notebook/: experiment.ipynb
