[project]
name = "semantic-image-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "coloredlogs==15.0.1",
    "fastapi==0.121.3",
    "huggingface-hub==0.36.0",
    "ipython==9.7.0",
    "langchain-astradb==0.6.0",
    "langchain-community==0.4.1",
    "langchain-core==1.1.0",
    "langchain-experimental==0.4.0",
    "langchain-huggingface==1.0.1",
    "langchain-openai==1.0.3",
    "langchain-qdrant==1.1.0",
    "nest-asyncio==1.6.0",
    "open-clip-torch==3.2.0",
    "pillow==12.0.0",
    "pydantic==2.12.4",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "requests==2.32.5",
    "structlog==25.4.0",
    "torch==2.9.1",
    "uvicorn==0.38.0",
]
